# bookshelf_r

./: .gitignore  .gitmodules  Cargo.toml  README.md  dev.md  notes.md
benches/: ibm01.fsdc_r.pl  ibm01.nets  ibm01.nodes  ibm01.pl  ibm01.wts
input/: ibm01.aux  ibm01.pl  ibm01.scl  n10.aux  n100.aux  n200.aux  n300.aux
src/: bbox.rs  bookshelf.rs  lib.rs  main.rs  marklist.rs  point.rs
