# lib = {crate-type = ["staticlib"]}
[package]
name = "bookshelf_r"
version = "0.1.0"
edition = "2021"


[dependencies]
libc = "0.2.159"
scan_fmt = "0.2.6"
sscanf = "0.4.2"
# pstools = {git = "https://github.com/profmadden/pstools_r"}
metapartition = {git = "https://github.com/profmadden/metapartition"}
argh = "0.1.13"
pstools = "0.1.0"
# malduit = {path = "malduit"}
