# lib = {crate-type = ["staticlib"]}
[package]
name = "bookshelf_r"
version = "0.1.0"
edition = "2021"


[dependencies]
libc = "0.2.159"
scan_fmt = "0.2.6"
sscanf = "0.4.2"
pstools = {git = "https://github.com/profmadden/pstools_r"}
# pstools = "0.1.0"
hypergraph = { git = "https://github.com/profmadden/hypergraph_bu", package = "hypergraph_bu"}
# Metapartition supports a built-in dumb partitioner, hMetis, KaHyPar, and mt-KaHyPar.  These
# features are turned off by default, and the Bookshelf library does not need them by default.
# Bookshelf *will* create a hypergraph structure that can be used by metapartition.
metapartition = {git = "https://github.com/profmadden/metapartition", features=[]}
argh = "0.1.13"
lineio = "0.1.2"
# malduit = {path = "malduit"}
